--- a/members.html
+++ b/members.html
@@ -165,10 +165,10 @@
 										</div>
 									  </section>
 									
-									<section id="colab" class="inline	">
+									<section id="colab" class="inline em">
 									  <h2>Collaborators</h2>
-										<img class="imagetest" src="img/ProfilePics/Gualberto Rosado.jpg" alt="Member 1">
 									  <p>
+										<span class="image left"><img src="img/ProfilePics/Gualberto Rosado.jpg" alt="" /></span><br>
 										Dr. Gualberto Rosado Rodríguez 
 										PhD in Marine Sciences - Biological Oceanography 
 										Assistant Professor, UPRA 
@@ -182,8 +182,12 @@
 					
 										I teach courses in Environmental Mycology, Molecular Biology, Biotechnology, and Microbiology. Also, I direct undergraduate student research in the area of Environmental Mycology.
 									  </p>
-										<img class="imagetest" src="img/ProfilePics/Eneilis Mulero.jpg" alt="Member 1">
+									  <br>
+									  <br>
 									  <p>
+										<span class="image left"><img src="img/ProfilePics/Eneilis Mulero.jpg" alt="" /></span><br>
+
+
 										Prof. Eneilis Mulero Oliveras
 										MS in Biology
 										Instructor, UPRA
